FIX: Added more padding to sections to avoid scrolling header overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,8 +108,8 @@ input {
     display: grid;
 }
 .section {
-    padding-top: 3.75rem;
-    padding-bottom: 3.75rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 }
 .section__title {
     font-size: var(--fs-h2);
